# rinh-hack

./: .env.example  .eslintignore  .gitignore  .prettierignore  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  quasar.config.js  tsconfig.json
.github/workflows/: docker-publish.yml
API/: Dockerfile
API/src/: .gitignore  go.mod  go.sum  main.go
backend/apps/api/auth/: admin.py  models.py
backend/apps/core/api/v1/: urls.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: __init__.py  custom.py
backend/config/settings/base/: apps.py
backend/config/settings/components/: __init__.py  auth.py  paths.py  rest_framework.py
backend/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
backend/templates/admin/: base_site.html
client/: Dockerfile  package.json  quasar.config.js
client/src/: App.vue
client/src/boot/: axios.ts  openlayers.ts
client/src/components/: EssentialLink.vue
client/src/layouts/: MainLayout.vue
client/src/models/: index.ts
client/src/pages/: GraphsPage.vue  IndexPage.vue  MapPage.vue
client/src/router/: routes.ts
client/src/stores/: logs.ts
config/: Dockerfile.backend
config/docker/: docker-compose.yml  nginx.conf
elasticsearch/config/: elasticsearch.yml
frontend/src/boot/: axios.ts
frontend/src/pages/: IndexPage.vue
logstash/: Dockerfile
logstash/patterns/: nginx
logstash/pipeline/: logstash.conf
nginx/: default.conf  nginx.conf
